<resources xmlns:ns1="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" ns1:ignore="ExtraTranslation,MissingTranslation">
    <string name="client_type">phone</string>
    <string name="host">www.lechange.cn:443</string>
    <string name="device_type_choose">选择设备类型</string>
    <string name="device_type_input_hint">请输入设备型号</string>
    <string name="device_type_other">其他</string>
    <string name="device_type_sure">确定</string>
    <string name="device_type_choose_tip">如何查看设备类型</string>
    <string name="mobile_common_bec_common_timeout">网络不给力，请检查网络！</string>
    <string name="mobile_common_bec_add_device_valid_error">安全码错误</string>
    <string name="mobile_common_bec_device_locked">抱歉，设备密码尝试过多，您的设备已被锁定，请断电重启设备</string>
    <string name="mobile_common_bec_common_network_exception">网络不给力</string>
    <string name="add_box_tip_confirm_btn" translatable="false">已确认，开始添加</string>
    <string name="add_box_tip" translatable="false">添加前请确保盒子能正常工作：</string>
    <string name="add_box_tip1" translatable="false">① 插上电源，乐盒指示灯显示为白色</string>
    <string name="add_box_tip2" translatable="false">② 连上可用网络</string>
    <string name="add_device_box_is_offline" translatable="false">乐盒不在线，请检测是否联网</string>
    <string name="assetfont_html" translatable="false">file:///android_asset/htmls/1.htm</string>
    <string name="add_device_not_tip_again" translatable="false">下次不再提示</string>
    <string name="add_device_input_sn_by_user_not_support_box" translatable="false">*乐盒及配件不支持手动输入序列号添加</string>
    <string name="add_device_timeout_title_tip8">用顶针长按设备背部reset孔直至设备正面指示灯熄灭后点击“重新开始”</string>
    <string name="add_device_timeout_light_tip9">绿/蓝灯长亮</string>
    <string name="add_device_timeout_add_by_qrcode">二维码添加</string>
    <string name="add_device_timeout_router_failed">连接路由器失败</string>
    <string name="add_device_timeout_network_failed">接入网络失败</string>
    <string name="add_device_qrcode_title_tip">请将二维码正对摄像头镜头</string>
    <string name="add_device_qrcode_msg_tip">距离保持在10-30cm,前后缓慢移动\n听到“二维码扫描成功”的语音提示后点击下一步</string>
    <string name="add_device_enable_motion_detect">开启设备的动检、抓图、录像功能</string>
    <string name="add_device_input_sec_code_tip">请输入设备的6位安全码</string>
    <string name="add_device_input_sec_code_by_user">请输入安全码</string>
    <string name="add_device_commom_dev_more_than_ten_tip">非常抱歉，您已经尝试了10次了，休息30分钟后再来试试吧</string>
    <string name="add_device_commom_dev_more_than_ten_twice_tip">非常抱歉，您已经尝试了20次了，休息一下，明天再来试试吧</string>
    <string name="add_device_commom_dev_ip_error_tip">您的设备注册到平台已超过3天，要求设备与客户端在同一局域网才能绑定请断电重启设备</string>
    <string name="add_device_commom_dev_sn_code_conflict_tip">您的设备序列号冲突</string>
    <string name="add_device_input_sn">请输入设备序列号</string>
    <string name="add_device_title">设备添加</string>
    <string name="add_device_no_gateway">暂无可关联的网关</string>
    <string name="add_device_choose_related_gateway">请选择需要关联的网关:</string>
    <string name="add_device_plug_cable_to_device">请将设备插入网线</string>
    <string name="add_device_same_network_tip">请将手机和设备连接到同一网络</string>
    <string name="add_device_operation_by_instructions">请按照设备使用说明书进行操作</string>
    <string name="add_device_plug_power">请将设备接通电源</string>
    <string name="add_device_con_wifi">请将手机连接WiFi</string>
    <string name="add_device_wifi_ssid">WiFi网络:</string>
    <string name="add_device_input_wifi_password">请输入WiFi密码</string>
    <string name="add_device_connect_and_goto_next">连接后将自动下一步</string>
    <string name="add_device_complete_related_operations">已完成相关操作</string>
    <string name="add_device_confirm_same_network">已确认连上同一网络</string>
    <string name="add_device_add_by_wired">有线添加</string>
    <string name="add_device_scan_lechange_device_qr_code">请扫描乐橙设备二维码</string>
    <string name="add_device_device_bind_by_yourself">该设备已在您的账号下</string>
    <string name="add_device_switch_to_wired_add">切换至有线添加</string>
    <string name="add_device_switch_to_wireless_add">切换至无线添加</string>
    <string name="add_device_password_error_and_will_lock">密码错误，连续错误5次后设备将被锁定</string>
    <string name="add_device_scan_device_qr_code">请扫描设备机身上的二维码</string>
    <string name="add_device_add_bySn">序列号</string>
    <string name="add_device_input_sn_under_device">请输入设备机身标签上的序列号和安全码</string>
    <string name="add_device_confirm_to_connect_correct_wifi">请确认手机已连上设备所要连接的WiFi</string>
    <string name="add_device_remember_password">记住密码</string>
    <string name="add_device_device_not_support_5g">该设备不支持5GWiFi</string>
    <string name="add_device_adjust_phone_volume">请调大手机音量\n并将手机喇叭对准设备麦克风</string>
    <string name="add_device_keep_phone_close_to_device">将手机尽可能靠近设备</string>
    <string name="add_device_connect_router_please_wait">正在连接路由器，请稍候...</string>
    <string name="add_device_adjust_phone_volume_to_hear_bugu">请调大手机音量，并将手机喇叭对准设备麦克风\n确认听到“布谷，布谷”声</string>
    <string name="add_device_set_device_password_for_safety">为加强安全防护，请设置您的设备密码</string>
    <string name="add_device_kindly_reminder">温馨提示</string>
    <string name="add_device_define_device_password_tip">设备密码是乐橙创新的安全加固策略，旨在更好地保障您设备的信息安全。只有使用正确的设备密码，才能够获取设备的音视频信息。\n当您将摄像机接入NVR等设备时，需要您手动输入该密码，请您妥善保管；如您遗忘密码，可将设备恢复默认配置后再添加至帐号，以设置新的设备密码</string>
    <string name="add_device_connect_cloud_please_wait">正在连接云平台，请稍候...</string>
    <string name="add_device_binding_to_account">正在绑定设备到帐户，请稍候...</string>
    <string name="add_device_input_device_password">请输入设备密码</string>
    <string name="add_device_password_initial_tip">1.如您曾在乐橙客户端或其他客户端设置过设备密码，并遗忘密码，可将设备恢复默认配置后再重新添加设备，以设置新的设备密码。
        \n2.如您未曾设置过设备密码，且您的设备标签上带有”安全码“字样，请输入设备标签上的8位安全码即可。</string>
    <string name="add_device_add_successfully">添加成功!</string>
    <string name="add_device_name_for_device">请给设备取个名字吧!</string>
    <string name="add_device_time">时间</string>
    <string name="add_device_bind_success_quit_tip">未设置时区可能导致云存储等服务出现异常</string>
    <string name="add_device_detecting_network_safety">正在检测网络安全配置，请稍候...</string>
    <string name="add_device_confrim_to_quit">确定退出？</string>
    <string name="add_device_not_complete_tip">您还未完成配置，如果退出，你将可能重新开始配置流程</string>
    <string name="add_device_device_bind_by_other">抱歉，您的设备已被%s绑定</string>
    <string name="add_device_not_support_to_bind">抱歉，暂不支持添加该型号设备</string>
    <string name="add_device_tip_not_support_5g_1">1.您的摄像机暂不支持5G Hz频段Wi-Fi,如您使用的是双频路由器，请让手机和摄像机连接到2.4G Hz频段Wi-Fi的信号下。</string>
    <string name="add_device_tip_not_support_5g_2">2.如您不确定手机和摄像机当前所连接的Wi-Fi频段,您可查看路由器相关说明书，进入路由器设置页面进行确认。</string>
    <string name="add_device_i_need_help">帮助</string>
    <string name="add_device_connect_timeout">连接超时</string>
    <string name="add_device_operation_by_voice_or_light">请按照设备指示灯或语音提示进行选择操作</string>
    <string name="add_device_operation_by_voice_tip">请按照设备指示灯或语音提示操作</string>
    <string name="add_device_disconnect_power_and_restart">请将设备断电并重新连接电源后点击“重新开始”</string>
    <string name="add_device_timeout_title_tip7">请再试一次，或选择其他方式添加设备</string>
    <string name="add_device_yellow_light_twinkle">重新开始</string>
    <string name="add_device_red_light_rotate">红灯旋转</string>
    <string name="add_device_green_light_twinkle">绿灯闪烁</string>
    <string name="add_device_blue_light_always">蓝灯常亮</string>
    <string name="add_device_red_light_twinkle">红灯闪烁</string>
    <string name="add_device_red_light_always">红灯长亮</string>
    <string name="add_device_green_light_always">绿灯长亮</string>
    <string name="add_device_continue_to_wait">继续等待</string>
    <string name="add_device_quit_add_process">退出添加</string>
    <string name="add_device_restart">重新开始</string>
    <string name="add_device_choose_ap">软AP添加</string>
    <string name="add_device_choose_wlan">无线添加</string>
    <string name="add_device_choose_lan">有线添加</string>
    <string name="add_device_config_failed">配置失败</string>
    <string name="add_device_detect_safe_network_config_failed">无法检测网络安全配置\n请确认手机和设备连接到同一网络</string>
    <string name="add_device_choose_wifi">选取WiFi网络:</string>
    <string name="add_device_connect_error_and_quit_retry">连接异常,请退出重试</string>
    <string name="add_device_softap_dev_connect_tip">您的铃铛设备正在连接Wi-Fi，如果连接成功，设备指示灯青色灯闪烁停止，变成青色灯常亮</string>
    <string name="add_device_softap_dev_connect_check_tip">青色灯常亮</string>
    <string name="add_device_current_accessory_sn">当前配件序列号(S/N)：</string>
    <string name="add_device_pairing_please_wait">配对中,请耐心等待...</string>
    <string name="add_device_keep_ap_close_to_gateway">将配件尽可能靠近网关设备</string>
    <string name="add_device_wifi_config_success">配置成功</string>
    <string name="add_device_ap_install_battery">请将配件装上电池或连接电源适配器，如有插片，请将插片拔掉.</string>
    <string name="add_device_timeout_init_failed">检测网络安全配置失败</string>
    <string name="add_device_wait_to_connect_wifi">请等待系统自动连接</string>
    <string name="add_device_wait_to_connect_wifi_failed">请进入手机的WiFi设置，连接上名为"%s"的热点，然后返回此页面</string>
    <string name="add_device_verify_device_pwd_failed">验证失败，请重新输入设备密码</string>
    <string name="add_device_listen_wifi_pwd_error_tip">听到设备提示WIFI密码错误？</string>
    <string name="add_device_next_step_count_down">下一步(%ds)</string>
    <string name="add_device_goto_connect_wifi">点击去选择WiFi网络</string>
    <string name="add_device_congratulations">恭喜你</string>
    <string name="add_device_get_free_cloud_package">获得免费%1$s天云存储%2$s个月套餐</string>
    <string name="add_device_get_permanent_free_cloud_package">获得%1$s天云存储永久免费套餐</string>
    <string name="add_device_free_cloud_usage">点击去激活按钮后找到右上角“试用套餐”即可免费体验</string>
    <string name="add_device_days_remaining">%s天云存储</string>
    <string name="add_device_service_time">剩余天数  %s天</string>
    <string name="add_device_service_time_permanent_free">剩余天数  永久</string>
    <string name="add_device_free_cloud_activated">去激活</string>
    <string name="add_device_success_cloud_services_type">套餐类型</string>
    <string name="add_device_goto_open_location_service">请打开手机“定位服务”来允许“乐橙”获取当前的WiFi信息</string>
    <string name="device_add_scan_error">未检测到二维码信息</string>
    <string name="add_device_input_sccode">请输入8位设备安全码</string>
    <string name="add_device_without_input_sccode_tip">*如标签上无安全验证码，则无需输入</string>
    <string name="add_device_input_corrent_sc_tip">请输入正确的安全验证码</string>
    <string name="add_device_add_volume_tip">请调大手机音量</string>
    <string name="add_device_adjust_phone_volume_to_hear_volume">请调大手机音量，并将手机喇叭对准设备麦克风\n确认听到声波</string>
    <string name="add_device_will_hear_volume">即将听到声波</string>
    <string name="add_device_will_hear_bugu">即将听到“布谷，布谷”声</string>
    <string name="add_device_falshlight_off">轻触照亮</string>
    <string name="add_device_falshlight_on">轻触关闭</string>
    <string name="add_device_input_imei_under_device">请输入设备机身标签上的IMEI号</string>
    <string name="add_device_input_imei">请输入设备IMEI号</string>
    <string name="add_device_nb_tip1">请先按设备的自检/消音按钮</string>
    <string name="add_device_nb_tip2">如果删除设备后重新添加需要断电重连</string>
    <string name="add_device_input_imei_by_user_tip">*IMEI号为15-17位数字</string>
    <string name="add_device_device_sn_or_imei_not_match">输入信息有误，请检查后重新输入</string>
    <string name="add_device_add_ap_upper_limit">添加配件已达上限</string>
    <string name="add_device_wait_to_connect_wifi_failed_sc">请进入手机的WiFi设置，连接上名为"%s"的热点，然后返回此页面</string>
    <string name="add_device_about_wifi_pwd">关于热点密码</string>
    <string name="add_device_tip_about_wifi_pwd">设备的热点密码为设备安全码，找到设备标签上带有”SC码“的字样，输入设备标签上的8位SC码即可。</string>
    <string name="device_disturb_state_failed">设置失败</string>
    <string name="device_manager_password_error">密码错误</string>
    <string name="device_manager_summer_time">夏令时</string>
    <string name="device_manager_input_device_name">请输入设备名称</string>
    <string name="device_manager_input_captcha">请输入验证码</string>
    <string name="device_manager_regain">重新获取</string>
    <string name="device_manager_summer_time_rule">夏令时设置必须大于1小时</string>
    <string name="mobile_common_device_pwd_rule">8-32位数字、字母、符号组合（区分大小写）</string>
    <string name="common_next">下一步</string>
    <string name="device_manager_wifi_name">名称：</string>
    <string name="device_manager_wifi_psw">密码：</string>
    <string name="add_device_input_wifi_name">请输入网络名称</string>
</resources>