<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c7"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/c43">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:text="@string/device_manager_wifi_name"
            android:textSize="@dimen/f1"
            android:textColor="@color/c2"/>

        <com.mm.android.deviceaddmodule.mobilecommon.widget.ClearEditText
            android:id="@+id/wifi_name"
            style="@style/TextAppearance.17sp_lc_black_color"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_15"
            android:background="@null"
            android:gravity="center_vertical|left"
            android:hint="@string/add_device_input_wifi_name"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/c2"
            android:textColorHint="@color/c6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/c43">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:text="@string/device_manager_wifi_psw"
            android:textSize="@dimen/f1"
            android:textColor="@color/c2"/>

        <com.mm.android.deviceaddmodule.mobilecommon.widget.ClearPasswordEditText
            android:id="@+id/wifi_psw"
            style="@style/TextAppearance.17sp_lc_black_color"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_15"
            android:background="@null"
            android:gravity="center_vertical|left"
            android:hint="@string/add_device_input_wifi_password"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/c2"
            android:textColorHint="@color/c6"
            android:textCursorDrawable="@drawable/text_cursor_drawable"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_5g_tip"
        android:drawableEnd="@drawable/adddevice_icon_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="end|center"
        android:maxLines="2"
        android:singleLine="false"
        android:text="@string/add_device_device_not_support_5g"
        android:textColor="@color/c5"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/next"
        style="@style/add_device_btn_style"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/common_next" />

</LinearLayout>