<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c43"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/adddevice_icon_devicepassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/add_device_set_device_password_for_safety"
        android:textColor="@color/c2"
        android:textSize="17sp" />


    <com.mm.android.deviceaddmodule.mobilecommon.widget.ClearPasswordEditText
        android:id="@+id/et_pwd_new"
        style="@style/TextAppearance.17sp_lc_black_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/tv_pwd_tip_new"
        android:background="@drawable/common_btn_bg_shape_gray"
        android:drawablePadding="13dp"
        android:gravity="center_vertical|left"
        android:hint="@string/add_device_input_device_password"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="32"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:textColor="@color/c51"
        android:textColorHint="@color/c8"
        android:textCursorDrawable="@drawable/text_cursor_drawable"
        android:textSize="17sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="@dimen/add_device_common_margin_10"
        android:layout_marginRight="15dp"
        android:text="@string/mobile_common_device_pwd_rule"
        android:textColor="@color/c5"
        android:textSize="13sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/bottom_tip_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/add_device_kindly_reminder"
            android:textColor="@color/c0"
            android:textSize="14sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_init"
            android:layout_below="@id/bottom_tip_title">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/add_device_define_device_password_tip"
                android:textColor="@color/c5"
                android:textSize="12sp" />
        </ScrollView>

        <TextView
            android:id="@+id/tv_init"
            style="@style/add_device_btn_style"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="30dp"
            android:text="@string/common_next" />
    </RelativeLayout>

</LinearLayout>