<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c7"
    android:orientation="vertical">
    <!--标题栏-->
    <com.mm.android.deviceaddmodule.mobilecommon.widget.CommonTitle
        android:id="@+id/device_hidden_title"
        style="@style/mobile_common_common_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/c43">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:text="@string/device_manager_wifi_name"
            android:textColor="@color/c2"
            android:textSize="@dimen/f1" />

        <com.mm.android.deviceaddmodule.mobilecommon.widget.ClearEditText
            android:id="@+id/wifi_name"
            style="@style/TextAppearance.17sp_lc_black_color"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_15"
            android:background="@null"
            android:gravity="center_vertical|left"
            android:hint="@string/add_device_input_wifi_name"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/c2"
            android:textColorHint="@color/c6" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/c43">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:text="@string/device_manager_wifi_psw"
            android:textColor="@color/c2"
            android:textSize="@dimen/f1" />

        <com.mm.android.deviceaddmodule.mobilecommon.widget.ClearPasswordEditText
            android:id="@+id/wifi_psw"
            style="@style/TextAppearance.17sp_lc_black_color"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_15"
            android:background="@null"
            android:gravity="center_vertical|left"
            android:hint="@string/add_device_input_wifi_password"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/c2"
            android:textColorHint="@color/c6" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_5g_tip"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:drawableEnd="@drawable/adddevice_icon_help"
        android:gravity="center_vertical|right"
        android:layout_gravity="right"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:maxLines="2"
        android:singleLine="false"
        android:text="@string/add_device_device_not_support_5g"
        android:textColor="@color/c2"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@drawable/mobile_common_next_btn_selector"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/common_next"
        android:textColor="@color/c43"
        android:textSize="@dimen/f2" />

</LinearLayout>