<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/adddevice_pic_safetycode" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_device_input_sec_code_tip"
        android:paddingLeft="@dimen/add_device_common_margin_15"
        android:layout_marginTop="20dp"
        android:textSize="16dp"
        android:textColor="@color/c2"
        android:gravity="center_vertical" />


    <com.mm.android.deviceaddmodule.mobilecommon.widget.ClearEditText
        android:id="@+id/et_user_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_device_common_edit_height"
        android:background="@drawable/common_btn_bg_shape_gray"
        android:layout_marginTop="@dimen/add_device_common_margin_15"
        android:hint="@string/add_device_input_sec_code_by_user"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:paddingLeft="@dimen/add_device_common_margin_15"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:maxLength="64"
        android:textColor="@color/c2"
        android:textColorHint="@color/c5"
        android:textCursorDrawable="@drawable/text_cursor_drawable"
        android:textSize="18dp">
        <requestFocus />
    </com.mm.android.deviceaddmodule.mobilecommon.widget.ClearEditText>


    <TextView
        android:id="@+id/next_btn"
        style="@style/add_device_btn_style"
        android:text="@string/common_next"
        android:layout_marginTop="50dp" />

</LinearLayout>